fixed height calculation of map and scrollbar issues

--- a/assets/styles/sass-components/_items-list.scss
+++ b/assets/styles/sass-components/_items-list.scss
@@ -101,7 +101,6 @@
       }
     }
     .results {
-      height: 100%;
       list-style: none;
       margin-bottom: 0;
       padding-left: 0;
